Covid19 data analysis

--- a/notebooks/process_data/create_h5.ipynb
+++ b/notebooks/process_data/create_h5.ipynb
@@ -10,16 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current machine: compute-a-16-169.o2.rc.hms.harvard.edu\n",
+      "Current machine: compute-a-16-88.o2.rc.hms.harvard.edu\n",
       "HSM Computational partition detected.\n",
-      "/n/groups/reich/hringbauer/git/covid19_data\n"
+      "/n/groups/reich/hringbauer/git/covid19_data\n",
+      "CPU Count: 32\n"
      ]
     }
    ],
@@ -57,7 +58,9 @@
     "        \n",
     "os.chdir(path)  # Set the right Path (in line with Atom default)\n",
     "print(os.getcwd())\n",
+    "print(f\"CPU Count: {mp.cpu_count()}\")\n",
     "\n",
+    "### Load Python scripts\n",
     "sys.path.append(\"./python3/\")\n",
     "from manipulate_fasta import fasta_iter_raw, fasta_iter"
    ]
@@ -71,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will load 17148 Sequences from ./output/single_seq_aligned_temp1.tsv\n",
-      "CPU times: user 84.6 ms, sys: 13.3 ms, total: 97.9 ms\n",
-      "Wall time: 95.4 ms\n"
+      "Will load 165610 Sequences from ./output/single_seq_aligned_temp1.tsv\n",
+      "CPU times: user 474 ms, sys: 87.2 ms, total: 562 ms\n",
+      "Wall time: 573 ms\n"
      ]
     }
    ],
@@ -245,7 +248,7 @@
     "%%time\n",
     "aligned_path_fasta = \"./output/single_seq_aligned_temp1.tsv\"\n",
     "\n",
-    "df = pd.read_csv(aligned_path_fasta, sep=\"\\t\")\n",
+    "df = pd.read_csv(aligned_path_fasta, sep=\"\\t\", low_memory=False)\n",
     "df = df[df[\"include\"]==True].copy()\n",
     "print(f\"Will load {len(df)} Sequences from {aligned_path_fasta}\")\n",
     "### Manually filling in (next iteration has it automatic)\n",
@@ -263,33 +266,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Producing sequence: 0\n",
-      "Producing sequence: 1000\n",
-      "Producing sequence: 2000\n",
-      "Producing sequence: 3000\n",
-      "Producing sequence: 4000\n",
-      "Producing sequence: 5000\n",
-      "Producing sequence: 6000\n",
-      "Producing sequence: 7000\n",
-      "Producing sequence: 8000\n",
-      "Producing sequence: 9000\n",
-      "Producing sequence: 10000\n",
-      "Producing sequence: 11000\n",
-      "Producing sequence: 12000\n",
-      "Producing sequence: 13000\n",
-      "Producing sequence: 14000\n",
-      "Producing sequence: 15000\n",
-      "Producing sequence: 16000\n",
-      "Producing sequence: 17000\n",
-      "CPU times: user 1min 13s, sys: 4.31 s, total: 1min 17s\n",
-      "Wall time: 7min 31s\n"
+      "Producing sequence: 0\n"
      ]
     }
    ],
@@ -308,34 +292,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully saved 17148 individuals to: ./output/h5/covid_seqs.h5\n",
-      "CPU times: user 131 ms, sys: 2.54 s, total: 2.67 s\n",
-      "Wall time: 4.32 s\n"
+      "Successfully saved 119923 individuals to: ./output/h5/covid_seqs_oct.h5\n",
+      "CPU times: user 2.03 s, sys: 7.57 s, total: 9.6 s\n",
+      "Wall time: 21 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "save_h5(seqs, iids, path=\"./output/h5/covid_seqs.h5\")"
+    "save_h5(seqs, iids, path=\"./output/h5/covid_seqs_oct.h5\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run and Save Allelic Frequency Spectrum (SNPs)"
+    "# Run and Save Allelic Frequency Spectrum (SNPs)\n",
+    "Takes about 1 min for 120 seqences"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -343,8 +328,8 @@
      "output_type": "stream",
      "text": [
       "Running all Loci: n=29903\n",
-      "CPU times: user 1min 52s, sys: 21.6 ms, total: 1min 52s\n",
-      "Wall time: 1min 51s\n"
+      "CPU times: user 13min 25s, sys: 5.51 s, total: 13min 31s\n",
+      "Wall time: 13min 31s\n"
      ]
     }
    ],
@@ -355,26 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 29903 Loci Statistics to ./output/tables/allele_spectrum.tsv\n"
+      "Saved 29903 Loci Statistics to ./output/tables/allele_spectrum_oct20.tsv\n"
      ]
     }
    ],
    "source": [
-    "savepath = \"./output/tables/allele_spectrum.tsv\"\n",
+    "savepath = \"./output/tables/allele_spectrum_oct20.tsv\"\n",
     "df1.to_csv(savepath, sep=\"\\t\", index=False)\n",
     "print(f\"Saved {len(df1)} Loci Statistics to {savepath}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,23 +504,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 29903 Loci Statistics from ./output/tables/allele_spectrum.tsv\n",
-      "Max Ref Count: 17143\n",
-      "CPU times: user 27.8 ms, sys: 2.17 ms, total: 30 ms\n",
-      "Wall time: 27.1 ms\n"
+      "Loaded 29903 Loci Statistics from ./output/tables/allele_spectrum_oct20.tsv\n",
+      "Max Ref Count: 119893\n",
+      "CPU times: user 23.2 ms, sys: 5.08 ms, total: 28.3 ms\n",
+      "Wall time: 25.7 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "savepath = \"./output/tables/allele_spectrum.tsv\"\n",
+    "savepath = \"./output/tables/allele_spectrum_oct20.tsv\"\n",
     "df1 = pd.read_csv(savepath, sep=\"\\t\")\n",
     "print(f\"Loaded {len(df1)} Loci Statistics from {savepath}\")\n",
     "mx_ref = np.max(df1[\"refcount\"])\n",
@@ -544,33 +529,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minimum Count per Locus required: 6857.200000000001\n",
-      "Found 60 Variants with MAF>0.01\n"
+      "Minimum Count per Locus required: 47957.200000000004\n",
+      "Found 61 Variants with MAF>0.01\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "c>t    23\n",
-       "g>a     9\n",
-       "t>c     9\n",
-       "g>t     7\n",
-       "a>g     4\n",
-       "t>a     2\n",
-       "c>a     2\n",
-       "g>c     2\n",
-       "a>t     2\n",
+       "c>t    27\n",
+       "g>a     8\n",
+       "g>t     8\n",
+       "t>c     8\n",
+       "g>c     3\n",
+       "a>g     3\n",
+       "c>a     1\n",
+       "t>a     1\n",
+       "c>g     1\n",
+       "a>t     1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,11 +572,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_var.to_csv(\"./output/tables/variant_maf.tsv\", sep=\"\\t\", index=False)"
+    "df_var.to_csv(\"./output/tables/variant_maf_oct.tsv\", sep=\"\\t\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>refcount</th>\n",
+       "      <th>altcount</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>alt</th>\n",
+       "      <th>pos</th>\n",
+       "      <th>totcount</th>\n",
+       "      <th>maf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>97113</td>\n",
+       "      <td>18593</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>240</td>\n",
+       "      <td>115706</td>\n",
+       "      <td>0.160692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>114109</td>\n",
+       "      <td>2729</td>\n",
+       "      <td>c</td>\n",
+       "      <td>t</td>\n",
+       "      <td>312</td>\n",
+       "      <td>116838</td>\n",
+       "      <td>0.023357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>444</th>\n",
+       "      <td>117553</td>\n",
+       "      <td>1737</td>\n",
+       "      <td>t</td>\n",
+       "      <td>c</td>\n",
+       "      <td>444</td>\n",
+       "      <td>119290</td>\n",
+       "      <td>0.014561</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1058</th>\n",
+       "      <td>97159</td>\n",
+       "      <td>22021</td>\n",
+       "      <td>c</td>\n",
+       "      <td>t</td>\n",
+       "      <td>1058</td>\n",
+       "      <td>119180</td>\n",
+       "      <td>0.184771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1162</th>\n",
+       "      <td>114124</td>\n",
+       "      <td>5329</td>\n",
+       "      <td>a</td>\n",
+       "      <td>t</td>\n",
+       "      <td>1162</td>\n",
+       "      <td>119453</td>\n",
+       "      <td>0.044612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28881</th>\n",
+       "      <td>73696</td>\n",
+       "      <td>44654</td>\n",
+       "      <td>g</td>\n",
+       "      <td>a</td>\n",
+       "      <td>28881</td>\n",
+       "      <td>118350</td>\n",
+       "      <td>0.377305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28882</th>\n",
+       "      <td>73724</td>\n",
+       "      <td>44660</td>\n",
+       "      <td>g</td>\n",
+       "      <td>c</td>\n",
+       "      <td>28882</td>\n",
+       "      <td>118384</td>\n",
+       "      <td>0.377247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28931</th>\n",
+       "      <td>116927</td>\n",
+       "      <td>1756</td>\n",
+       "      <td>c</td>\n",
+       "      <td>t</td>\n",
+       "      <td>28931</td>\n",
+       "      <td>118683</td>\n",
+       "      <td>0.014796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29644</th>\n",
+       "      <td>116686</td>\n",
+       "      <td>1785</td>\n",
+       "      <td>g</td>\n",
+       "      <td>t</td>\n",
+       "      <td>29644</td>\n",
+       "      <td>118471</td>\n",
+       "      <td>0.015067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29733</th>\n",
+       "      <td>112283</td>\n",
+       "      <td>1411</td>\n",
+       "      <td>g</td>\n",
+       "      <td>c</td>\n",
+       "      <td>29733</td>\n",
+       "      <td>113694</td>\n",
+       "      <td>0.012411</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>61 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       refcount  altcount ref alt    pos  totcount       maf\n",
+       "240       97113     18593   t   c    240    115706  0.160692\n",
+       "312      114109      2729   c   t    312    116838  0.023357\n",
+       "444      117553      1737   t   c    444    119290  0.014561\n",
+       "1058      97159     22021   c   t   1058    119180  0.184771\n",
+       "1162     114124      5329   a   t   1162    119453  0.044612\n",
+       "...         ...       ...  ..  ..    ...       ...       ...\n",
+       "28881     73696     44654   g   a  28881    118350  0.377305\n",
+       "28882     73724     44660   g   c  28882    118384  0.377247\n",
+       "28931    116927      1756   c   t  28931    118683  0.014796\n",
+       "29644    116686      1785   g   t  29644    118471  0.015067\n",
+       "29733    112283      1411   g   c  29733    113694  0.012411\n",
+       "\n",
+       "[61 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_var"
    ]
   },
   {
@@ -611,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,29 +794,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_der = create_der_df(df, df_var, seqs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 17148 Individuals with derived Data to ./output/tables/derived_common_snps.tsv\n"
+      "CPU times: user 791 ms, sys: 535 ms, total: 1.33 s\n",
+      "Wall time: 1.32 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "df_der = create_der_df(df, df_var, seqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 119923 Individuals with derived Data to ./output/tables/derived_common_snps_oct20.tsv\n"
      ]
     }
    ],
    "source": [
     "### And now save it\n",
-    "savepath = \"./output/tables/derived_common_snps.tsv\"\n",
+    "savepath = \"./output/tables/derived_common_snps_oct20.tsv\"\n",
     "df_der.to_csv(savepath, sep=\"\\t\", index=False)\n",
     "print(f\"Saved {len(df_der)} Individuals with derived Data to {savepath}\")"
    ]
@@ -1019,6 +1192,26 @@
    ],
    "source": [
     "df_meta[\"host\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.75"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "165*5 / 60"
    ]
   },
   {
