--- a/notebooks/sandbox/fasta_test.ipynb
+++ b/notebooks/sandbox/fasta_test.ipynb
@@ -16,8 +16,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current machine: DESKTOP-5RJD9NC\n",
-      "D:\\gitProjects\\covid19_data\n"
+      "Current machine: compute-a-16-106.o2.rc.hms.harvard.edu\n",
+      "HSM Computational partition detected.\n",
+      "/n/groups/reich/hringbauer/git/covid19_data\n"
      ]
     }
    ],
@@ -28,12 +29,17 @@
     "from itertools import groupby\n",
     "import socket\n",
     "import os as os\n",
+    "import gzip as gz\n",
     "\n",
     "### Pick the right path (whether on cluster or at home)\n",
     "socket_name = socket.gethostname()\n",
     "print(f\"Current machine: {socket_name}\")\n",
     "if socket_name == \"DESKTOP-5RJD9NC\":\n",
     "    path = \"/gitProjects/covid19_data\"   # The Path on Harald's machine\n",
+    "elif socket_name.startswith(\"compute-\"):\n",
+    "    print(\"HSM Computational partition detected.\")\n",
+    "    path = \"/n/groups/reich/hringbauer/git/covid19_data/\"  # The Path on Midway Cluster\n",
+    "\n",
     "else: \n",
     "    raise RuntimeWarning(\"Not compatible machine. Check!!\")\n",
     "    \n",
@@ -47,14 +53,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fasta_iter(fasta_name):\n",
+    "def fasta_iter(fasta_name, gzip=False):\n",
     "    \"\"\"\n",
     "    modified from Brent Pedersen\n",
     "    Correct Way To Parse A Fasta File In Python\n",
     "    given a fasta file. yield tuples of header, sequence\n",
     "    \"\"\"\n",
     "    \"first open the file outside \"\n",
-    "    fh = open(fasta_name)\n",
+    "    if gzip:\n",
+    "        fh = gz.open(fasta_name)\n",
+    "        \n",
+    "    else:\n",
+    "        fh = open(fasta_name)\n",
     "\n",
     "    # ditch the boolean (x[0]) and just keep the header or sequence since\n",
     "    # we know they alternate.\n",
@@ -66,7 +76,6 @@
     "\n",
     "        # join all sequence lines to one.\n",
     "        seq = \"\".join(s.strip() for s in faiter.__next__())\n",
-    "\n",
     "        yield (headerStr, seq) \n",
     "        \n",
     "def load_fasta(month=\"mar20\", day=26):\n",
@@ -82,6 +91,27 @@
    "metadata": {},
    "source": [
     "### Load Fasta File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Load Fast Function for custom file name"
    ]
   },
   {
@@ -229,11 +259,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test loading aligned fasta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5.69 s, sys: 3.06 s, total: 8.76 s\n",
+      "Wall time: 22.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "fiter = fasta_iter(\"./data/oct20/sequences_2020-10-30_07-23.fasta\")\n",
+    "iids = np.array([ff[0] for ff in fiter])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "166919"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(iids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Wuhan/IVDC-HB-01/2019', 'Wuhan/IVDC-HB-04/2020',\n",
+       "       'Wuhan/IVDC-HB-05/2019', ..., 'Australia/SAP521/2020',\n",
+       "       'Australia/SAP522/2020', 'Australia/SAP516/2020'], dtype='<U47')"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "fiter = fasta_iter_raw(\"./data/oct20/sequences_2020-10-30_07-23.fasta.gz\", gzip=True)\n",
+    "seqs = np.array([ff[1] for ff in fiter])"
+   ]
   }
  ],
  "metadata": {
@@ -252,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7rc1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
