Plot update to October data

--- a/notebooks/process_data/align_fasta.ipynb
+++ b/notebooks/process_data/align_fasta.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current machine: compute-a-16-88.o2.rc.hms.harvard.edu\n",
+      "Current machine: compute-e-16-235.o2.rc.hms.harvard.edu\n",
       "HMS Computational partition detected.\n",
       "/n/groups/reich/hringbauer/git/covid19_data\n",
-      "CPU Count: 32\n"
+      "CPU Count: 28\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,190 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded n=166919 IIDs\n",
-      "Splitting up fastas...\n",
-      "Running individual # 0\n",
-      "Running individual # 1000\n",
-      "Running individual # 2000\n",
-      "Running individual # 3000\n",
-      "Running individual # 4000\n",
-      "Running individual # 5000\n",
-      "Running individual # 6000\n",
-      "Running individual # 7000\n",
-      "Running individual # 8000\n",
-      "Running individual # 9000\n",
-      "Running individual # 10000\n",
-      "Running individual # 11000\n",
-      "Running individual # 12000\n",
-      "Running individual # 13000\n",
-      "Running individual # 14000\n",
-      "Running individual # 15000\n",
-      "Running individual # 16000\n",
-      "Running individual # 17000\n",
-      "Running individual # 18000\n",
-      "Running individual # 19000\n",
-      "Running individual # 20000\n",
-      "Running individual # 21000\n",
-      "Running individual # 22000\n",
-      "Running individual # 23000\n",
-      "Running individual # 24000\n",
-      "Running individual # 25000\n",
-      "Running individual # 26000\n",
-      "Running individual # 27000\n",
-      "Running individual # 28000\n",
-      "Running individual # 29000\n",
-      "Running individual # 30000\n",
-      "Running individual # 31000\n",
-      "Running individual # 32000\n",
-      "Running individual # 33000\n",
-      "Running individual # 34000\n",
-      "Running individual # 35000\n",
-      "Running individual # 36000\n",
-      "Running individual # 37000\n",
-      "Running individual # 38000\n",
-      "Running individual # 39000\n",
-      "Running individual # 40000\n",
-      "Running individual # 41000\n",
-      "Running individual # 42000\n",
-      "Running individual # 43000\n",
-      "Running individual # 44000\n",
-      "Running individual # 45000\n",
-      "Running individual # 46000\n",
-      "Running individual # 47000\n",
-      "Running individual # 48000\n",
-      "Running individual # 49000\n",
-      "Running individual # 50000\n",
-      "Running individual # 51000\n",
-      "Running individual # 52000\n",
-      "Running individual # 53000\n",
-      "Running individual # 54000\n",
-      "Running individual # 55000\n",
-      "Running individual # 56000\n",
-      "Running individual # 57000\n",
-      "Running individual # 58000\n",
-      "Running individual # 59000\n",
-      "Running individual # 60000\n",
-      "Running individual # 61000\n",
-      "Running individual # 62000\n",
-      "Running individual # 63000\n",
-      "Running individual # 64000\n",
-      "Running individual # 65000\n",
-      "Running individual # 66000\n",
-      "Running individual # 67000\n",
-      "Running individual # 68000\n",
-      "Running individual # 69000\n",
-      "Running individual # 70000\n",
-      "Running individual # 71000\n",
-      "Running individual # 72000\n",
-      "Running individual # 73000\n",
-      "Running individual # 74000\n",
-      "Running individual # 75000\n",
-      "Running individual # 76000\n",
-      "Running individual # 77000\n",
-      "Running individual # 78000\n",
-      "Running individual # 79000\n",
-      "Running individual # 80000\n",
-      "Running individual # 81000\n",
-      "Running individual # 82000\n",
-      "Running individual # 83000\n",
-      "Running individual # 84000\n",
-      "Running individual # 85000\n",
-      "Running individual # 86000\n",
-      "Running individual # 87000\n",
-      "Running individual # 88000\n",
-      "Running individual # 89000\n",
-      "Running individual # 90000\n",
-      "Running individual # 91000\n",
-      "Running individual # 92000\n",
-      "Running individual # 93000\n",
-      "Running individual # 94000\n",
-      "Running individual # 95000\n",
-      "Running individual # 96000\n",
-      "Running individual # 97000\n",
-      "Running individual # 98000\n",
-      "Running individual # 99000\n",
-      "Running individual # 100000\n",
-      "Running individual # 101000\n",
-      "Running individual # 102000\n",
-      "Running individual # 103000\n",
-      "Running individual # 104000\n",
-      "Running individual # 105000\n",
-      "Running individual # 106000\n",
-      "Running individual # 107000\n",
-      "Running individual # 108000\n",
-      "Running individual # 109000\n",
-      "Running individual # 110000\n",
-      "Running individual # 111000\n",
-      "Running individual # 112000\n",
-      "Running individual # 113000\n",
-      "Running individual # 114000\n",
-      "Running individual # 115000\n",
-      "Running individual # 116000\n",
-      "Running individual # 117000\n",
-      "Running individual # 118000\n",
-      "Running individual # 119000\n",
-      "Running individual # 120000\n",
-      "Running individual # 121000\n",
-      "Running individual # 122000\n",
-      "Running individual # 123000\n",
-      "Running individual # 124000\n",
-      "Running individual # 125000\n",
-      "Running individual # 126000\n",
-      "Running individual # 127000\n",
-      "Running individual # 128000\n",
-      "Running individual # 129000\n",
-      "Running individual # 130000\n",
-      "Running individual # 131000\n",
-      "Running individual # 132000\n",
-      "Running individual # 133000\n",
-      "Running individual # 134000\n",
-      "Running individual # 135000\n",
-      "Running individual # 136000\n",
-      "Running individual # 137000\n",
-      "Running individual # 138000\n",
-      "Running individual # 139000\n",
-      "Running individual # 140000\n",
-      "Running individual # 141000\n",
-      "Running individual # 142000\n",
-      "Running individual # 143000\n",
-      "Running individual # 144000\n",
-      "Running individual # 145000\n",
-      "Running individual # 146000\n",
-      "Running individual # 147000\n",
-      "Running individual # 148000\n",
-      "Running individual # 149000\n",
-      "Running individual # 150000\n",
-      "Running individual # 151000\n",
-      "Running individual # 152000\n",
-      "Running individual # 153000\n",
-      "Running individual # 154000\n",
-      "Running individual # 155000\n",
-      "Running individual # 156000\n",
-      "Running individual # 157000\n",
-      "Running individual # 158000\n",
-      "Running individual # 159000\n",
-      "Running individual # 160000\n",
-      "Running individual # 161000\n",
-      "Running individual # 162000\n",
-      "Running individual # 163000\n",
-      "Running individual # 164000\n",
-      "Running individual # 165000\n",
-      "Running individual # 166000\n",
-      "Sucessfully written: n=166756 fastas into ./output/singleseq/\n",
-      "Paths already existing: n=0\n",
-      "Saved Summary Dataframe n=166919 to ./output/single_seq_split.tsv\n",
-      "CPU times: user 33min 3s, sys: 44.7 s, total: 33min 47s\n",
-      "Wall time: 1h 1min 22s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "#fasta_path = \"./data/apr20/gisaid_hcov-19_2020_04_29_23_mod.fasta\" # End of April Version\n",
@@ -552,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -773,10 +592,10 @@
       "Doing row 163000\n",
       "Doing row 164000\n",
       "Doing row 165000\n",
-      "Successfully newly aligned n=34808 sequences.\n",
+      "Successfully newly aligned n=0 sequences.\n",
       "Saved Summary Dataframe n=165746 to ./output/single_seq_aligned_temp1.tsv\n",
-      "CPU times: user 7min 24s, sys: 5min 41s, total: 13min 5s\n",
-      "Wall time: 4h 41min 18s\n"
+      "CPU times: user 52.3 s, sys: 6.98 s, total: 59.3 s\n",
+      "Wall time: 3min 9s\n"
      ]
     }
    ],
@@ -791,6 +610,185 @@
     "                     save_path_df = \"./output/single_seq_aligned_temp1.tsv\", # Where to save the full, new output\n",
     "                     overwrite=False, output=True,\n",
     "                     threads=26)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iid</th>\n",
+       "      <th>iid_clean</th>\n",
+       "      <th>cov</th>\n",
+       "      <th>include</th>\n",
+       "      <th>aligned_path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>hCoV-19|USA|WA-S88|2020|EPI_ISL_417141|2020-03-01</td>\n",
+       "      <td>hCoV-19.USA.WA-S88.2020.EPI_ISL_417141.2020-03-01</td>\n",
+       "      <td>29868</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/hCoV-19.USA.WA-S88....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>hCoV-19|Japan|OS-20-07-1|2020|EPI_ISL_410532|2...</td>\n",
+       "      <td>hCoV-19.Japan.OS-20-07-1.2020.EPI_ISL_410532.2...</td>\n",
+       "      <td>29878</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/hCoV-19.Japan.OS-20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hCoV-19|Hong Kong|HKPU28_3001|2020|EPI_ISL_417...</td>\n",
+       "      <td>hCoV-19.Hong_Kong.HKPU28_3001.2020.EPI_ISL_417...</td>\n",
+       "      <td>29782</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/hCoV-19.Hong_Kong.H...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>hCoV-19|South Africa|R03006-20|2020|EPI_ISL_41...</td>\n",
+       "      <td>hCoV-19.South_Africa.R03006-20.2020.EPI_ISL_41...</td>\n",
+       "      <td>29903</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/hCoV-19.South_Afric...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>hCoV-19|Italy|INMI1-cs|2020|EPI_ISL_410546|202...</td>\n",
+       "      <td>hCoV-19.Italy.INMI1-cs.2020.EPI_ISL_410546.202...</td>\n",
+       "      <td>29785</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/hCoV-19.Italy.INMI1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165741</th>\n",
+       "      <td>Australia|SAP519|2020</td>\n",
+       "      <td>Australia.SAP519.2020</td>\n",
+       "      <td>29834</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/Australia.SAP519.20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165742</th>\n",
+       "      <td>Australia|SAP520|2020</td>\n",
+       "      <td>Australia.SAP520.2020</td>\n",
+       "      <td>29813</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/Australia.SAP520.20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165743</th>\n",
+       "      <td>Australia|SAP521|2020</td>\n",
+       "      <td>Australia.SAP521.2020</td>\n",
+       "      <td>29134</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/Australia.SAP521.20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165744</th>\n",
+       "      <td>Australia|SAP522|2020</td>\n",
+       "      <td>Australia.SAP522.2020</td>\n",
+       "      <td>28990</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/Australia.SAP522.20...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165745</th>\n",
+       "      <td>Australia|SAP516|2020</td>\n",
+       "      <td>Australia.SAP516.2020</td>\n",
+       "      <td>29835</td>\n",
+       "      <td>True</td>\n",
+       "      <td>./output/singleseq_aligned/Australia.SAP516.20...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>165746 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      iid  \\\n",
+       "0       hCoV-19|USA|WA-S88|2020|EPI_ISL_417141|2020-03-01   \n",
+       "1       hCoV-19|Japan|OS-20-07-1|2020|EPI_ISL_410532|2...   \n",
+       "2       hCoV-19|Hong Kong|HKPU28_3001|2020|EPI_ISL_417...   \n",
+       "3       hCoV-19|South Africa|R03006-20|2020|EPI_ISL_41...   \n",
+       "4       hCoV-19|Italy|INMI1-cs|2020|EPI_ISL_410546|202...   \n",
+       "...                                                   ...   \n",
+       "165741                              Australia|SAP519|2020   \n",
+       "165742                              Australia|SAP520|2020   \n",
+       "165743                              Australia|SAP521|2020   \n",
+       "165744                              Australia|SAP522|2020   \n",
+       "165745                              Australia|SAP516|2020   \n",
+       "\n",
+       "                                                iid_clean    cov  include  \\\n",
+       "0       hCoV-19.USA.WA-S88.2020.EPI_ISL_417141.2020-03-01  29868     True   \n",
+       "1       hCoV-19.Japan.OS-20-07-1.2020.EPI_ISL_410532.2...  29878     True   \n",
+       "2       hCoV-19.Hong_Kong.HKPU28_3001.2020.EPI_ISL_417...  29782     True   \n",
+       "3       hCoV-19.South_Africa.R03006-20.2020.EPI_ISL_41...  29903     True   \n",
+       "4       hCoV-19.Italy.INMI1-cs.2020.EPI_ISL_410546.202...  29785     True   \n",
+       "...                                                   ...    ...      ...   \n",
+       "165741                              Australia.SAP519.2020  29834     True   \n",
+       "165742                              Australia.SAP520.2020  29813     True   \n",
+       "165743                              Australia.SAP521.2020  29134     True   \n",
+       "165744                              Australia.SAP522.2020  28990     True   \n",
+       "165745                              Australia.SAP516.2020  29835     True   \n",
+       "\n",
+       "                                             aligned_path  \n",
+       "0       ./output/singleseq_aligned/hCoV-19.USA.WA-S88....  \n",
+       "1       ./output/singleseq_aligned/hCoV-19.Japan.OS-20...  \n",
+       "2       ./output/singleseq_aligned/hCoV-19.Hong_Kong.H...  \n",
+       "3       ./output/singleseq_aligned/hCoV-19.South_Afric...  \n",
+       "4       ./output/singleseq_aligned/hCoV-19.Italy.INMI1...  \n",
+       "...                                                   ...  \n",
+       "165741  ./output/singleseq_aligned/Australia.SAP519.20...  \n",
+       "165742  ./output/singleseq_aligned/Australia.SAP520.20...  \n",
+       "165743  ./output/singleseq_aligned/Australia.SAP521.20...  \n",
+       "165744  ./output/singleseq_aligned/Australia.SAP522.20...  \n",
+       "165745  ./output/singleseq_aligned/Australia.SAP516.20...  \n",
+       "\n",
+       "[165746 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
